--- a/index.html
+++ b/index.html
@@ -2,56 +2,53 @@
 <html>
   <head>
     <script data-ad-client="ca-pub-8292086279690961" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <title>Alberto Ezequiel Irace</title>
+    <title>emanuel Manriquez</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1"
     />
     <meta
       name="description"
-      content="Alberto Ezequiel Irace is a Full Stack Developer. Check out the latest video tutorial by Alberto Ezequiel Irace"
+      content="Emanuel Manriquez is a Full Stack Developer. Check out the latest video tutorial by Alberto Ezequiel Irace"
     />
     <meta name="title" content="Alberto Ezequiel Irace | Full Stack Web Developer" />
     <meta name="type" content="profile" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       property="og:title"
-      content="Alberto Ezequiel Irace | Full Stack Web Developer"
+      content="Emanuel Manriquez | Full Stack Web Developer"
     />
-    <meta property="og:url" content="https://Eze323.github.io/" />
+    <meta property="og:url" content="https://emamanriquez.github.io/" />
     <meta
       property="og:description"
-      content="Alberto Ezequiel Irace is a Full Stack Developer. Check out the latest video tutorial by Alberto Ezequiel Irace"
+      content="Emanuel Manriquez is a Full Stack Developer. Check out the latest video tutorial by Alberto Ezequiel Irace"
     />
-    <meta
-      property="og:image"
-      content="https://yt3.ggpht.com/ytc/AAUvwnhCBZT9l6zbJi2LXNGXaaERLBF8IGmy73WRe4k_=s88-c-k-c0x00ffffff-no-rj"
-    />
-    <meta property="og:type" content="portfolio" />
+    <meta property="og:image" />
+      
     <meta property="og:site_name" content="https://Eze323.github.io/" />
     <meta property="og:locale" content="en_US" />
     <meta
       name="twitter:title"
-      content="Alberto Ezequiel Irace | Full Stack Web Developer"
+      content="Emanuel Manriquez | Full Stack Web Developer"
     />
     <meta name="twitter:url" content="https://Eze323.github.io/" />
     <meta
       name="twitter:description"
-      content="Alberto Ezequiel Irace is a Full Stack Developer. Check out the latest video tutorial by Alberto Ezequiel Irace"
+      content="Emanuel Manriquez is a Full Stack Developer. Check out the latest video tutorial by Alberto Ezequiel Irace"
     />
     <meta
       name="twitter:image"
       content="https://yt3.ggpht.com/ytc/AAUvwnhCBZT9l6zbJi2LXNGXaaERLBF8IGmy73WRe4k_=s88-c-k-c0x00ffffff-no-rj"
     />
-    <meta name="twitter:site" content="@brijesh_dhanani" />
+    
     <meta
       itemprop="name"
-      content="Alberto Ezequiel Irace | Full Stack Web Developer"
+      content="Emanuel Manriquez | Full Stack Web Developer"
     />
-    <meta itemprop="url" content="https://Eze323.github.io/" />
+    <meta itemprop="url" content="https://emamanriquez.github.io/" />
     <meta
       itemprop="description"
-      content="Alberto Ezequiel Irace is a Full Stack Developer. Check out the latest video tutorial by Alberto Ezequiel Irace"
+      content="Emanuel Manriquez is a Full Stack Developer. Check out the latest video tutorial by Emanuel Manriquez"
     />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -80,7 +77,7 @@
     <section class="s1">
       <div class="main-container">
         <div class="greeting-wrapper">
-          <h1>Hi, I'm Alberto Ezequiel Irace</h1>
+          <h1>Hi, I'm Emanuel Manriquez</h1>
         </div>
         <div class="intro-wrapper">
           <div class="nav-wrapper">
@@ -91,7 +88,7 @@
             </div>
             <ul id="navigation">
               <li>
-                <a target="_blank" href="https://github.com/Eze323"
+                <a target="_blank" href="https://emamanriquez.github.io/"
                   ><i class="fa fa-github"></i
                 ></a>
               </li>
